tests/bad/var_redef.oc
/// fail: Variable x already exists in this scope

def main() {
    let x = 0
    let x = 7
}